# Operating-System

./: .gitignore  CMakeLists.txt  Makefile  README.md  qemu.sh
00.BootLoader/: disk_read.asm  disk_read.c
02.Kernel64/Source/: Console.c  Console.h  ConsoleShell.c  ConsoleShell.h  InterruptHandler.c  Keyboard.c  Keyboard.h  Main.c  Queue.c  Queue.h  Utility.c  Utility.h
scripts/: install_ubuntu18.sh
